fixed scrollbar issue, added homepage content

--- a/css/main.css
+++ b/css/main.css
@@ -19,5 +19,8 @@
 }
 
 main {
-  margin: 30px;
+  padding-top: 20px;
+  padding-left: 30px;
+  padding-bottom: 20px;
+  padding-right: 30px;
 }
